<resources>
    <string name="app_name">CRUD_SQlite</string>
    <string name="hint_nombre">nombre estudiante</string>
    <string name="hint_correo">Correo estudiante</string>
    <string name="hint_curso">Curso a ingresar</string>
    <string name="guardar">Guardar</string>
    <string name="Listar">Listar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">eliminar</string>
</resources>